--- a/ref/screen-citeprocjs.css
+++ b/ref/screen-citeprocjs.css
@@ -1,8 +1,27 @@
+body { width: 750px; margin: auto; position: center; font-family: 'Lucida Sans', Verdana, sans-serif; font-size: 12px; }
+.xml { padding: 1em; border: silver 1px solid; background: #FFF68F; }
+.relaxngcompact { padding: 1em; border: silver 1px solid; background: #F6F9ED; }
+/* .js { padding: 1em; border: silver 1px solid; background: #FFF68F; } */
+.js { padding: 1em; border: silver 1px solid; background: #F6F9ED; }
+dl { background: #ECF1EF; padding:1em; border: silver 1px solid;}
+dt { font-weight: bold; }
+.info-version { text-align: center; font-size: 130%; font-weight: bold; }
+.info-date { text-align: center; font-size: 110%; font-weight: bold; }
+.title { text-align: center; margin: 4em 4em 1em 4em; }
+.subtitle { text-align: center; margin: 1em 4em 4em 4em; }
+.topic-title { font-weight: bold; font-size: 130%; }
+.contents { margin-bottom: 6em; }
+
+.contributors { margin-left: 250px; margin-top: 2em; margin-bottom: 2em; }
+dl.contributors { background: white; border: none; }
+.contributors dt { margin: 1em; }
+
 .nx { color: red; font-weight: bold } /* Function name */
 
 .c { color: #408080; font-style: italic } /* Comment */
 .err { border: 1px solid #FF0000 } /* Error */
-.k { color: #008000; font-weight: bold } /* Keyword */
+
+.k { color: #007020; font-weight: bold } /* Keyword  [DONE] */
 .o { color: #666666 } /* Operator */
 .cm { color: #408080; font-style: italic } /* Comment.Multiline */
 .cp { color: #BC7A00 } /* Comment.Preproc */
@@ -59,3 +78,36 @@
 .vg { color: #19177C } /* Name.Variable.Global */
 .vi { color: #19177C } /* Name.Variable.Instance */
 .il { color: #666666 } /* Literal.Number.Integer.Long */
+
+table.codeblock, tr.codeblock, td.linenos, td.codeblock, table.codeblock pre { 
+	margin: 0; 
+	padding: 0; 
+	border: 0; 
+	vertical-align: baseline; 
+	border: none; 
+}
+
+td.linenos { 
+	border-right: 1px solid #AAAAAA; 
+	text-align: right; 
+	color: #AAAAAA; 
+	padding-right: 5px; 
+	padding-left: 5px; 
+}
+
+td.codeblock { padding-left: 5px; }
+pre.codeblock { }
+pre.codeblock span.Normal { }
+
+pre.codeblock span.DataType { color: #902000; }
+pre.codeblock span.DecVal { color: #40a070; }
+pre.codeblock span.BaseN { color: #40a070; }
+pre.codeblock span.Float { color: #40a070; }
+pre.codeblock span.Char { color: #4070a0; }
+pre.codeblock span.String { color: #4070a0; }
+pre.codeblock span.Comment { color: #60a0b0; font-style: italic; }
+pre.codeblock span.Others { color: #007020; }
+pre.codeblock span.Alert { color: red; font-weight: bold; }
+pre.codeblock span.Function { color: #06287e; }
+pre.codeblock span.RegionMarker { }
+pre.codeblock span.Error { color: red; font-weight: bold; }
