--- a/ref/screen-citeprocjs.css
+++ b/ref/screen-citeprocjs.css
@@ -1,22 +1,86 @@
-body { width: 750px; margin: auto; position: center; font-family: 'Lucida Sans', Verdana, sans-serif; font-size: 12px; }
+body { 
+    width: 750px; 
+    margin: auto; 
+    position: center; 
+    font-family: 'Lucida Sans', Verdana, sans-serif; 
+    font-size: 10.5pt; 
+    color: #434343;
+}
 .xml { padding: 1em; border: silver 1px solid; background: #FFF68F; }
 .relaxngcompact { padding: 1em; border: silver 1px solid; background: #F6F9ED; }
 /* .js { padding: 1em; border: silver 1px solid; background: #FFF68F; } */
 .js { padding: 1em; border: silver 1px solid; background: #F6F9ED; }
 dl { background: #ECF1EF; padding:1em; border: silver 1px solid;}
-dt { font-weight: bold; }
+dt { font-weight: bold; margin-top: 0.5em; }
 .info-version { text-align: center; font-size: 130%; font-weight: bold; }
 .info-date { text-align: center; font-size: 110%; font-weight: bold; }
 .title { text-align: center; margin: 4em 4em 1em 4em; }
 .subtitle { text-align: center; margin: 1em 4em 4em 4em; }
 .topic-title { font-weight: bold; font-size: 130%; }
-.contents { margin-bottom: 6em; }
+.contents { margin-bottom: 1em; }
 
 .contributors { margin-left: 250px; margin-top: 2em; margin-bottom: 2em; }
 dl.contributors { background: white; border: none; }
 .contributors dt { margin: 1em; }
 
-.nx { color: red; font-weight: bold } /* Function name */
+tt.literal .pre {
+  font-family: courier, monospace;
+  font-size: 105%;
+}
+
+a { 
+    border-bottom: dotted 1px #aaa; 
+    color: black;
+    text-decoration: none;
+}
+
+
+a:link { color: #434343; text-decoration: none; } 
+a:visited { color: #434343; text-decoration: none; }
+a:active { color: #434343; text-decoration: none; }
+a:hover { color: #a30826; text-decoration: none; }
+
+a.toc-backref:link { color: black; } 
+a.toc-backref:visited { color: black; } 
+a.toc-backref:active { color: black; } 
+a.toc-backref:hover { color: #a30826; } 
+
+
+div.admonition {
+  border: 3px solid #cccccc;
+  float: right;
+  width: 33%;
+  padding: 0px 5px 0px 5px;
+  background: white;
+  margin: -1em -1em 0px 5px;
+}
+
+div.admonition p {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+div.admonition-important .admonition-title:before {
+  content: url("important.png");
+  padding-right: 5px;
+}
+
+div.admonition-hint .admonition-title:before {
+  content: url("ktip.png");
+  padding-right: 5px;
+}
+
+div.admonition p.admonition-title {
+  font-weight: bold;
+  font-size: 150%;
+  border-bottom: 1px solid black;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+/* .nx { color: red; font-weight: bold } */ /* Function name */
 
 .c { color: #408080; font-style: italic } /* Comment */
 .err { border: 1px solid #FF0000 } /* Error */
@@ -94,6 +158,8 @@ td.linenos {
 	padding-right: 5px; 
 	padding-left: 5px; 
 }
+
+.codeblock { font-size: 110%; }
 
 td.codeblock { padding-left: 5px; }
 pre.codeblock { }
