--- a/ref/screen-citeprocjs.css
+++ b/ref/screen-citeprocjs.css
@@ -11,8 +11,14 @@ body {
 .xml { padding: 1em; border: silver 1px solid; background: #EAFABC; }
 .relaxngcompact { padding: 1em; border: silver 1px solid; background: #F6F9ED; }
 
+.clothesline {
+  position: relative;
+}
+
 /* .js { padding: 1em; border: silver 1px solid; background: #FFF68F; } */
 .js { padding: 1em; border: silver 1px solid; background: #EAFABC; }
+.text { padding: 1em; border: silver 1px solid; background: #FFcccc; }
+
 dl { background: #B7FCE1; padding:1em; border: silver 1px solid;}
 dt { font-weight: bold; margin-top: 0.5em; }
 .info-version { text-align: center; font-size: 130%; font-weight: bold; }
@@ -78,6 +84,12 @@ a.toc-backref:visited { color: black; }
 a.toc-backref:active { color: black; } 
 a.toc-backref:hover { color: #a30826; } 
 
+blockquote.clothesline {
+  position: relative;
+  padding: 0px;
+  margin: 0px;
+  border: 0px none;
+}
 
 div.admonition {
   border: 3px solid #c0c0c0;
@@ -86,6 +98,13 @@ div.admonition {
   padding: 0px 5px 0px 5px;
   background: white;
   margin: -1em -1em 0px 5px;
+}
+
+blockquote.clothesline div.admonition {
+  float: none;
+  position: absolute;
+  top: 0em;
+  right: 0em;
 }
 
 div.admonition p {
