--- a/ref/citeproc-doc/screen-citeprocjs.css
+++ b/ref/citeproc-doc/screen-citeprocjs.css
@@ -15,6 +15,10 @@ body {
   position: relative;
 }
 
+.double-border {
+  border: 5px double black;
+}
+
 h4 a {
   padding: 4px;
   border: 1px solid black;
