--- a/demo/primitive.css
+++ b/demo/primitive.css
@@ -1,8 +1,13 @@
+div.heading {
+    border-top: 1px solid black;
+}
+
 div.csl-bib-body {
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
 	padding-top: 0.5em;
 	padding-bottom: 0.5em;
+    margin-bottom: 1em;
 }
 
 div.csl-entry {
