Arrange for trailing punctuation set on cs:layout to migrate inward to the last rendering node.  Needed to prevent breakage in bibliography formatting, particularly for styles that use second-field-align or display attributes.  Fix required some smartening up in the non-rendering-group-suppression logic, also included in this changeset.

--- a/demo/primitive.css
+++ b/demo/primitive.css
@@ -1,3 +1,15 @@
+div.csl-left-margin {
+  width:2em;
+  float:left;
+  text-indent:1em;
+  padding:0.4em 0px 0.4em 0em;
+}
+
+div.csl-right-inline {
+  margin-left:2em;
+  padding:0.4em 0.4em 0.4em 1em;
+}
+
 div.csl-indent {
     margin-top: 0.5em;
     margin-left: 2em;
