--- a/demo/primitive.css
+++ b/demo/primitive.css
@@ -1,3 +1,9 @@
+
+.hangindent {
+  text-indent: -2em;
+  margin-left: 2em;
+}
+
 h2 {
   font-size: 110%;
 }
@@ -9,8 +15,24 @@ div.csl-left-margin {
   padding:0.4em 0px 0.4em 0em;
 }
 
+div.dateindent div.csl-left-margin {
+  width:3em;
+  float:left;
+  text-indent:1em;
+  padding:0.4em 0px 0.4em 0em;
+}
+
+div.dateindent div.csl-block {
+  font-weight: bold;
+}
+
 div.csl-right-inline {
   margin-left:2em;
+  padding:0.4em 0.4em 0.4em 1em;
+}
+
+div.dateindent div.csl-right-inline {
+  margin-left:3em;
   padding:0.4em 0.4em 0.4em 1em;
 }
 
