--- a/demo/primitive.css
+++ b/demo/primitive.css
@@ -1,3 +1,6 @@
+div.pagebreak {
+  page-break-before: always;
+}
 
 .hangindent {
   text-indent: -2em;
@@ -6,6 +9,10 @@
 
 h2 {
   font-size: 110%;
+  margin-top: 1em;
+  margin-bottom: 0em;
+  padding-top: 0em;
+  padding-bottom: 0em;
 }
 
 div.csl-left-margin {
