--- a/manual/screen-citeprocjs.css
+++ b/manual/screen-citeprocjs.css
@@ -1,3 +1,14 @@
+p.fixed {
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
+  margin-right: 0.5em;
+  border: solid black 1px;
+  background: white;
+}
+
 body { 
     width: 750px; 
     margin: auto; 
