--- a/demo/primitive.css
+++ b/demo/primitive.css
@@ -66,6 +66,8 @@ div.csl-indent {
     margin-top: 0.5em;
     margin-left: 2em;
     padding-bottom: 0.2em;
+    padding-left: 0.5em;
+    border-left: 5px solid #ccc;
 }
 
 div.heading {
